[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termq"
version = "0.1.0"
description = "A minimal GPT chat client in the terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tommy", email = "i@tjtl.io"}
]
keywords = ["openai", "gpt", "chat", "terminal", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai==0.27.8",
    "termcolor>=2.3.0",
    "rich>=13.4.2",
    "PyMuPDF>=1.22.3",
    "ocrmypdf>=13.7.0",
    "pyperclip==1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/termq"
Repository = "https://github.com/yourusername/termq"
"Bug Tracker" = "https://github.com/yourusername/termq/issues"

[project.scripts]
termq = "termq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["termq*"]

[tool.setuptools.package-data]
termq = ["characters/*.json", "characters/*.txt"]
